--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "PACKAGE_NAME",
-  "version": "0.1.0",
-  "description": "PACKAGE_DESCRIPTION",
+  "name": "vercel-serverless-api",
+  "version": "1.0.0",
+  "description": "A handler for Serverless Function in Vercel to develop API",
   "main": "lib/index.js",
   "files": [
     "lib/"
@@ -17,21 +17,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gastonpereyra/PACKAGE_NAME.git"
+    "url": "git+https://github.com/gastonpereyra/vercel-serverless-api.git"
   },
   "keywords": [],
   "author": "Gastón Pereyra",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/gastonpereyra/PACKAGE_NAME/issues"
+    "url": "https://github.com/gastonpereyra/vercel-serverless-api/issues"
   },
-  "homepage": "https://github.com/gastonpereyra/PACKAGE_NAME#readme",
+  "homepage": "https://github.com/gastonpereyra/vercel-serverless-api#readme",
   "devDependencies": {
-    "eslint": "^7.6.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "mocha": "^8.0.1",
+    "eslint-plugin-import": "^2.24.2",
+    "mocha": "^9.1.1",
     "nyc": "^15.1.0",
-    "sinon": "^9.0.2"
+    "sinon": "^11.1.2"
   }
 }
